# smart-pot

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig
components/at24cxx/: CMakeLists.txt  at24cxx.cpp
components/at24cxx/include/: at24cxx.hpp
components/dht/: CMakeLists.txt  dht.cpp
components/dht/include/: dht.hpp
components/ds3231/: CMakeLists.txt  ds3231.cpp  ds3231.h  ds3231.hpp
components/ds3231_device/: CMakeLists.txt  ds3231_device.c
components/ds3231_device/include/: ds3231_device.h
components/encoder/: CMakeLists.txt  encoder.c
components/esp_idf_lib_helpers/: CMakeLists.txt
components/i2c_bus/: Kconfig  i2c_bus.c
components/i2c_bus/include/: i2c_bus.h
components/i2cdev/: CMakeLists.txt  Kconfig  i2cdev.c  i2cdev.cpp  i2cdev.h
components/i2cdev/include/: i2cdev.hpp
components/moisture_sensor/: CMakeLists.txt  moisture_sensor.cpp
components/moisture_sensor/include/: moisture_sensor.hpp
components/ssd1306_device/: CMakeLists.txt  ssd1306_device.c
components/ssd1306_device/include/: ssd1306_device.h
components/u8g2/: CMakeLists.txt  u8g2_esp32_hal.c  u8g2_ll_hvline.c  u8x8_cad.c  u8x8_d_ssd1306_128x64_noname.c
components/u8g2/include/: u8g2_esp32_hal.h
main/: CMakeLists.txt  Kconfig.projbuild  crc8.cpp  crc8.hpp  main.c  main.cpp  menu.cpp  menu_item.cpp  smartpot.cpp  smartpot.hpp
main/include/: main.hpp  menu.hpp  menu_item.hpp  smartpot.hpp
